--- a/app/views/books/_nav.html.erb
+++ b/app/views/books/_nav.html.erb
@@ -1,4 +1,6 @@
 <nav>
+  <p>Browse by:</p>
   <%= link_to 'Books', root_path %>
   <%= link_to 'Authors', root_path %>
+  <%= link_to 'Genres', root_path %>
 </nav>
