added books, authors and genres pages. adjusted routes

--- a/app/views/books/_nav.html.erb
+++ b/app/views/books/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav>
   <p>Browse by:</p>
-  <%= link_to 'Books', root_path %>
-  <%= link_to 'Authors', root_path %>
-  <%= link_to 'Genres', root_path %>
+  <%= link_to 'Books', books_path %>
+  <%= link_to 'Authors', authors_path %>
+  <%= link_to 'Genres', genres_path %>
 </nav>
