added display partial for views

--- a/app/views/books/_nav.html.erb
+++ b/app/views/books/_nav.html.erb
@@ -1,8 +1,9 @@
 
 <nav>
   <h1>Book_Store</h1>
-  <p>Browse by:</p>
-  <%= link_to 'Books', books_path %>
-  <%= link_to 'Authors', authors_path %>
-  <%= link_to 'Genres', genres_path %>
+  <p>Browse by:
+    <%= link_to 'Books', books_path %>
+    <%= link_to 'Authors', authors_path %>
+    <%= link_to 'Genres', genres_path %>
+  </p>
 </nav>
