--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,17 @@
 <%= render "nav" %>
-<H1><%= @book.title %></H1>
-<h2>Written by:
-  <% @book.authors.each do |name| %>
-    <%= name.name %>
-  <% end %>
-</h2>
-<h2>Genre:
-  <% @book.genres.each do |name| %>
-    <%= name.name %>
-  <% end %>
-</h2>
+<div  style="background-color: #a0c0e0;">
+  <H1><%= @book.title %></H1>
+
+  <h2>Written by:
+    <% @book.authors.each do |name| %>
+      <%= name.name %>
+    <% end %>
+  </h2>
+
+  <h2>Genre:
+    <% @book.genres.each do |name| %>
+      <%= name.name %>
+    <% end %>
+  </h2>
+</div>
+<%= link_to 'back', :back %>
